Sun Dec 13 18:28:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/psych_emitter.c (start_document): should not exceed
	  tags array range.

	* ext/psych/psych_emitter.c (start_document): ensure string before
	  encoding conversion.

Sun Dec 13 18:26:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (tk_hash_kv): check types of array
	  argument.  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/tk/tkutil/tkutil.c (cbsubst_table_setup): check length of
	  argument arrays for each access, as callback methods can modify
	  them.  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/tk/tkutil/tkutil.c (cbsubst_table_setup): check types of
	  argument elements.  reported by Marcin 'Icewall' Noga of Cisco
	  Talos.

Sun Dec 13 18:19:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (ole_vstr2wc): check argument type, vstr
	  must be a String here.  reported by Marcin 'Icewall' Noga of
	  Cisco Talos.

Sun Dec 13 16:41:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (BOOTSTRAPRUBY): make BASERUBY full path before
	  building ruby to get rid of unexpectedly invoking built ruby.
	  [ruby-core:72065] [Bug #11807]

	* configure.in (BOOTSTRAPRUBY): use MINIRUBY but not BASERUBY
	  unless cross compiling.  [ruby-core:72065] [Bug #11807]

Sun Dec 13 14:17:19 2015  Akinori MUSHA  <knu@iDaemons.org>

	* test/test_shellwords.rb (TestShellwords): Add many more tests
	  for handling whitespace characters and frozenness.

Sun Dec 13 14:16:09 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (Shellwords#shellsplit): Document that this
	  method does not treat shell metacharacters as such.

Sun Dec 13 12:17:43 2015  Eric Wong  <e@80x24.org>

	* lib/shellwords.rb (shellescape): duplicate frozen literal
	* test/test_shellwords.rb (test_stringification): new test

Sun Dec 13 11:47:35 2015  Shugo Maeda  <shugo@ruby-lang.org>
